fixed word-wrap, removed networks and device types access if user is admin

--- a/src/app/admin/devices/device-details/device-details.component.scss
+++ b/src/app/admin/devices/device-details/device-details.component.scss
@@ -16,3 +16,6 @@
 .breadcrumb {
   //background-color: white;
 }
+.td-json-params{
+  word-wrap: break-word;
+}
